@@ -1,3 +1,9 @@
+Development Portal (2021-09-24 shi)
+==============================
+Update print-friendly css
+Remove sorting for result tables
+
+
 Development Portal (2021-09-23 shi)
 ==============================
 Fix css for participating-org id alignment
@@ -6,7 +12,6 @@ Update facet value type css
 Update facet separator
 Update result comment layout into tabs
 Update SAVi css
-Update print-friendly css
 
 
 Development Portal (2021-08-07 shi)
